--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
-Theme Name: Sponzrit theme
-Theme URI: http://sponzr.it
+Theme Name: Component theme
+Theme URI: https://github.com/amitmtrn/wp-component-theme
 Author: Amit Choukroun
 Author URI: 
 Description: 
 Version: 15.5.16
-License: commercial
+License: MIT
 License URI: 
-Text Domain: sponzrit
+Text Domain: component-theme
 */
